app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
/* Custom bootstrap variables must be set or imported *before* bootstrap. */
@import "bootstrap";
@import "**/*";


// Dropdown Navigation Styling
// Source: https://www.w3schools.com/howto/howto_css_dropdown.asp
 /* Dropdown Button */
 .dropbtn {
  background-color: #343a40;
  color: white;
  border: none;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  padding-top: 5px;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #343a40;
  min-width: 160px;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #ddd;}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {background-color: #fff; color: black} 

